--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ void main() {
 
 	<script src="three.min.js"></script>
 	<script src="FirstPersonControls.js"></script>
+	<script src="ObJLoader.js"></script>
 	<script src="Lensflare.js"></script>
 	<script src="stats.min.js"></script>
 	<script src="script.js"></script>
